fix para generos no seleccionables, mejora de visibilidad y css

--- a/static/css/music/upload.css
+++ b/static/css/music/upload.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     padding: 40px 20px;
     max-width: 60%;
     margin: auto;
